--- a/test/dummy/app/views/comboboxes/html_options.html.erb
+++ b/test/dummy/app/views/comboboxes/html_options.html.erb
@@ -1,4 +1,4 @@
-<style>
+<%= tag.style nonce: content_security_policy_nonce do %>
   :root {
     --hw-option-bg-color: #edf1fa;
     --hw-active-bg-color: #aefa98;
@@ -36,7 +36,7 @@
   .hw-combobox__option--selected {
     background-color: #f4ff59;
   }
-</style>
+<% end %>
 
 <%
   @state_options = combobox_options State.all,
