--- a/test/dummy/app/views/comboboxes/multiselect_custom_events.html.erb
+++ b/test/dummy/app/views/comboboxes/multiselect_custom_events.html.erb
@@ -1,21 +1,34 @@
-<style>
+<%= tag.style nonce: content_security_policy_nonce do %>
   #required { width: 12.5rem; }
-</style>
 
-<div data-controller="combobox--events" style="display: flex; flex-direction: column; align-items: start; gap: 1rem;">
-  <div style="display: flex; align-items: start; gap: 1rem;">
+  .event-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 1rem;
+  }
+
+  .event-group {
+    display: flex;
+    align-items: start;
+    gap: 1rem;
+  }
+<% end %>
+
+<div data-controller="combobox--events" class="event-container">
+  <div class="event-group">
     <span data-combobox--events-target="preselectionScratchpad"></span>
     <span data-combobox--events-target="selectionScratchpad"></span>
     <span data-combobox--events-target="removalScratchpad"></span>
   </div>
 
-  <div style="display: flex; align-items: start; gap: 1rem;">
+  <div class="event-group">
     <div data-combobox--events-target="preselectionCount"></div>
     <div data-combobox--events-target="selectionCount"></div>
     <div data-combobox--events-target="removalCount"></div>
   </div>
 
-  <div style="display: flex; align-items: start; gap: 1rem;">
+  <div class="event-group">
     <%= combobox_tag "states", State.all,
           id: "states-field",
           label: "States",
