--- a/app/views/hotwire_combobox/_component.html.erb
+++ b/app/views/hotwire_combobox/_component.html.erb
@@ -4,6 +4,19 @@
   <%= render "hotwire_combobox/combobox/hidden_field", component: component %>
 
   <%= tag.div **component.main_wrapper_attrs do %>
+    <%# Announcer styles defined here because they're not optional %>
+    <%= tag.style nonce: content_security_policy_nonce do %>
+      .hw-combobox__announcer {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        padding: 0;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        border: 0;
+      }
+    <% end %>
     <%= tag.div **component.announcer_attrs %>
     <%= render "hotwire_combobox/combobox/input", component: component %>
     <%= render "hotwire_combobox/combobox/paginated_listbox", component: component %>
