--- a/test/dummy/app/views/movies/_movie.turbo_stream.erb
+++ b/test/dummy/app/views/movies/_movie.turbo_stream.erb
@@ -1,3 +1,3 @@
-<div style="display: flex; flex-direction: row; align-items: center;">
+<div class="html-option">
   <p><%= movie.title %></p>
 </div>
