--- a/app/views/hotwire_combobox/_pagination.html.erb
+++ b/app/views/hotwire_combobox/_pagination.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (for_id:, src:) -%>
 
-<%= tag.li id: hw_pagination_frame_wrapper_id(for_id), data: {
-      hw_combobox_target: "endOfOptionsStream", input_type: params[:input_type] },
+<%= tag.li id: hw_pagination_frame_wrapper_id(for_id), class: "hw_combobox__pagination__wrapper",
+      data: { hw_combobox_target: "endOfOptionsStream", input_type: params[:input_type] },
       aria: { hidden: true } do %>
   <%= turbo_frame_tag hw_pagination_frame_id(for_id), src: src, loading: :lazy %>
 <% end %>
