--- a/test/dummy/app/views/comboboxes/enum.html.erb
+++ b/test/dummy/app/views/comboboxes/enum.html.erb
@@ -1,5 +1,6 @@
 <%= form_with model: Movie.first do |form| %>
   <%= form.combobox :rating, Movie.ratings %>
+  <%= form.submit %>
 <% end %>
 
 <%= combobox_tag "rating-enum", Movie.ratings, id: "rating-enum" %>
