--- a/test/dummy/app/views/comboboxes/enum.html.erb
+++ b/test/dummy/app/views/comboboxes/enum.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model: Movie.first do |form| %>
+  <%#= form.combobox :rating, Movie.ratings.keys %>
   <%= form.combobox :rating, Movie.ratings %>
   <%= form.submit %>
 <% end %>
