--- a/test/dummy/app/views/comboboxes/multiselect_prefilled_form.html.erb
+++ b/test/dummy/app/views/comboboxes/multiselect_prefilled_form.html.erb
@@ -3,6 +3,6 @@
 <% end %>
 
 <%= form_with model: @user, html: { style: "display: flex; flex-direction: column; gap: 1rem;" } do |form| %>
-  <%= form.combobox :visited_state_ids, State.all, label: "Visited states", multiselect_chip_src: new_state_chip_path %>
+  <%= form.combobox :visited_state_ids, State.all, label: "Visited states", multiselect_chip_src: state_chips_path %>
   <%= form.submit style: "padding: 0.5rem;" %>
 <% end %>
