--- a/test/dummy/app/views/comboboxes/multiselect_dismissing.html.erb
+++ b/test/dummy/app/views/comboboxes/multiselect_dismissing.html.erb
@@ -1,5 +1,11 @@
 <%= combobox_tag "state", State.all,
       id: "states-field",
       label: "States",
-      multiselect_chip_src: new_dismissing_state_chip_path,
+      multiselect_chip_src: dismissing_state_chips_path,
+      placeholder: "Select states" %>
+
+<%= combobox_tag "async_state", states_path,
+      id: "async-states-field",
+      label: "Async States",
+      multiselect_chip_src: dismissing_state_chips_path,
       placeholder: "Select states" %>
