Add `:free_text` as a shorthand for `:name_when_new`

--- a/test/dummy/app/views/comboboxes/new_options.html.erb
+++ b/test/dummy/app/views/comboboxes/new_options.html.erb
@@ -16,4 +16,4 @@
   <%= form.submit %>
 <% end %>
 
-<%= combobox_tag :movie, movies_path, name_when_new: :new_movie, id: "movie-field", style: "width: 13rem;" %>
+<%= combobox_tag :movie, movies_path, name_when_new: :new_movie, id: "movie-field" %>
