--- a/test/dummy/app/views/comboboxes/multiselect_new_values.html.erb
+++ b/test/dummy/app/views/comboboxes/multiselect_new_values.html.erb
@@ -1,13 +1,25 @@
+<%= tag.style nonce: content_security_policy_nonce do %>
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  input[type="submit"] {
+    padding: 0.5rem;
+  }
+<% end %>
+
 <% if flash[:notice] %>
   <p><%= flash[:notice] %></p>
 <% end %>
 
-<%= form_with model: @user, url: user_visits_url(@user), method: :post, html: { style: "display: flex; flex-direction: column; gap: 1rem;" } do |form| %>
+<%= form_with model: @user, url: user_visits_url(@user), method: :post do |form| %>
   <%= combobox_tag "user[visited_states]",
         State.all,
         id: "states-field",
         label: "Visited states (new allowed)",
         multiselect_chip_src: possibly_new_state_chips_path,
-        name_when_new: "user[visited_states]" %>
-  <%= form.submit style: "padding: 0.5rem;" %>
+        free_text: true %>
+  <%= form.submit %>
 <% end %>
