--- a/test/dummy/app/views/comboboxes/multiselect_prefilled_form.html.erb
+++ b/test/dummy/app/views/comboboxes/multiselect_prefilled_form.html.erb
@@ -1,8 +1,20 @@
+<%= tag.style nonce: content_security_policy_nonce do %>
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  input[type="submit"] {
+    padding: 0.5rem;
+  }
+<% end %>
+
 <% if flash[:notice] %>
   <p><%= flash[:notice] %></p>
 <% end %>
 
-<%= form_with model: @user, html: { style: "display: flex; flex-direction: column; gap: 1rem;" } do |form| %>
+<%= form_with model: @user do |form| %>
   <%= form.combobox :visited_state_ids, State.all, label: "Visited states", multiselect_chip_src: state_chips_path %>
-  <%= form.submit style: "padding: 0.5rem;" %>
+  <%= form.submit %>
 <% end %>
