Fix custom event tests

--- a/test/dummy/app/views/comboboxes/custom_events.html.erb
+++ b/test/dummy/app/views/comboboxes/custom_events.html.erb
@@ -17,8 +17,8 @@
 
 <div data-controller="combobox--events" class="event-container">
   <div class="event-group">
-    <span data-combobox--events-target="preselectionScratchpad"></span>
-    <span data-combobox--events-target="selectionScratchpad"></span>
+    <span id="preselection" data-combobox--events-target="preselectionScratchpad"></span>
+    <span id="selection" data-combobox--events-target="selectionScratchpad"></span>
   </div>
 
   <div class="event-group">
