--- a/test/dummy/app/views/comboboxes/multiselect_custom_events.html.erb
+++ b/test/dummy/app/views/comboboxes/multiselect_custom_events.html.erb
@@ -17,9 +17,9 @@
 
 <div data-controller="combobox--events" class="event-container">
   <div class="event-group">
-    <span data-combobox--events-target="preselectionScratchpad"></span>
-    <span data-combobox--events-target="selectionScratchpad"></span>
-    <span data-combobox--events-target="removalScratchpad"></span>
+    <span id="preselection" data-combobox--events-target="preselectionScratchpad"></span>
+    <span id="selection" data-combobox--events-target="selectionScratchpad"></span>
+    <span id="removal" data-combobox--events-target="removalScratchpad"></span>
   </div>
 
   <div class="event-group">
