Remove default :lazy value for loading: in _pagination partial

--- a/app/views/hotwire_combobox/_pagination.html.erb
+++ b/app/views/hotwire_combobox/_pagination.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (for_id:, src:, loading: :lazy) -%>
+<%# locals: (for_id:, src:, loading:) -%>
 
 <%= tag.li id: hw_pagination_frame_wrapper_id(for_id), class: "hw_combobox__pagination__wrapper",
       data: { hw_combobox_target: "endOfOptionsStream", input_type: params[:input_type], callback_id: params[:callback_id] },
